restructure all tables and pre user mgmt

--- a/src/Web.WebApp/Shared/MainLayout.razor
+++ b/src/Web.WebApp/Shared/MainLayout.razor
@@ -2,8 +2,12 @@
 @inherits LayoutComponentBase
 
 <MudThemeProvider Theme="@PrimaryTheme.Default"/>
-<MudDialogProvider/>
 <MudSnackbarProvider/>
+<MudDialogProvider 
+    CloseButton="true"
+    DisableBackdropClick="true"
+    Position="DialogPosition.TopCenter"
+    CloseOnEscapeKey="true" />
 
 <MudLayout>
     <AppBar OnDrawerToggle="@DrawerToggle" DrawerOpen="@_drawerOpen"/>
