update page title and finish edit user page

--- a/src/Web.WebApp/App.razor
+++ b/src/Web.WebApp/App.razor
@@ -14,7 +14,8 @@
         <NotFound>
             <LayoutView Layout="@typeof(EmptyLayout)">
                 <MudContainer MaxWidth="@MaxWidth.Medium" Class="p-5" Style="min-height: 320px;">
-                    <h5>404 Not Found</h5>
+                    <PageTitle>Page Not found</PageTitle>
+                    <h5>Page Not Found 404</h5>
                     <p>Sorry, this page has been moved or not exist.</p>
                     <HeadContent>
                         <meta name="robots" content="noindex" />
