--- a/src/Web.WebApp/Pages/Account/ForgotPassword.razor
+++ b/src/Web.WebApp/Pages/Account/ForgotPassword.razor
@@ -7,6 +7,7 @@
 @using Microsoft.AspNetCore.Hosting
 @using Microsoft.Extensions.Hosting
 @using System.Web
+@using Microsoft.Extensions.Logging
 @using Microsoft.Extensions.Options
 @using Web.WebApp.Components
 
@@ -14,6 +15,7 @@
 @inject NavigationManager Navigation;
 @inject IWebHostEnvironment HostEnvironment;
 @inject IEmailService EmailService;
+@inject ILogger<ForgotPassword> Logger;
 
 @inject IOptions<ReCaptchaSetting> ReCaptchaSetting
 
@@ -52,11 +54,7 @@
         </MudCardContent>
     </MudCard>
 </MudContainer>
-@* Debug only: print email confirmation link *@
-@if (!string.IsNullOrWhiteSpace(EmailConfirmLink) && HostEnvironment.IsDevelopment())
-{
-    <textarea>@EmailConfirmLink</textarea>
-}
+
 
 @code {
     public EmailInput Input { get; set; } = new EmailInput();
@@ -108,6 +106,12 @@
         if (!result)
         {
             InfoMessage = "Sorry, something went wrong. Please try again later.";
+        }
+
+         // Debug only: print email confirmation link
+        if (HostEnvironment.IsDevelopment())
+        {
+            Logger.LogDebug(EmailConfirmLink);
         }
     }
 
