--- a/src/Web.WebApp/Shared/MainLayout.razor
+++ b/src/Web.WebApp/Shared/MainLayout.razor
@@ -3,7 +3,8 @@
 
 <MudThemeProvider Theme="@PrimaryTheme.Default"/>
 <MudSnackbarProvider/>
-<MudDialogProvider 
+<MudDialogProvider
+    MaxWidth = "MaxWidth.False"
     CloseButton="true"
     DisableBackdropClick="true"
     Position="DialogPosition.TopCenter"
