--- a/src/Web.WebApp/Pages/Admin/UserEditDialog.razor
+++ b/src/Web.WebApp/Pages/Admin/UserEditDialog.razor
@@ -11,10 +11,32 @@
         <EditForm EditContext="@editContext">
             <DataAnnotationsValidator/>
             <ValidationSummary />
-            <MudTextField Label="Full Name" @bind-Value="@userModel.FullName" For="@(() => userModel.FullName)" Class="mb-3" />
-            <MudTextField Label="Email" @bind-Value="@userModel.Email" For="@(() => userModel.Email)" Class="mb-3" />
-            <MudTextField Label="Phone" @bind-Value="@userModel.PhoneNumber" For="@(() => userModel.PhoneNumber)" Class="mb-3" />
-            <MudTextField Label="Email" @bind-Value="@userModel.Email" For="@(() => userModel.Email)" Class="mb-3" />
+            <MudGrid>
+                <MudItem xs="12" sm="8">
+                    <MudTextField Label="Full Name" @bind-Value="@userModel.FullName" For="@(() => userModel.FullName)" />
+                </MudItem>
+                <MudItem xs="12" sm="4"></MudItem>
+            </MudGrid>
+            <MudGrid>
+                <MudItem xs="12" sm="8">
+                    <MudTextField ReadOnly="true" Disabled="true" Label="Email" @bind-Value="@userModel.Email" For="@(() => userModel.Email)" />
+                </MudItem>
+                <MudItem xs="12" sm="4" Style="display:flex; padding-bottom: 0;">
+                    <MudCheckBox ReadOnly="true" Disabled="true" Dense="true" Label="Email Confirmed" @bind-Checked="@userModel.EmailConfirmed" For="@(() => userModel.EmailConfirmed)" />
+                </MudItem>
+            </MudGrid>
+            <MudGrid>
+                <MudItem xs="12" sm="8">
+                    <MudTextField Label="Phone" @bind-Value="@userModel.PhoneNumber" For="@(() => userModel.PhoneNumber)" />
+                </MudItem>
+                <MudItem xs="12" sm="4" Style="display:flex; padding-bottom: 0;">
+                    <MudCheckBox ReadOnly="true" Disabled="true" Dense="true" Label="Phone Confirmed" @bind-Checked="@userModel.PhoneConfirmed" For="@(() => userModel.PhoneConfirmed)" />
+                </MudItem>
+            </MudGrid>
+            <div class="mt-4">
+                <MudText Color="@Color.Warning">Account Status</MudText>
+                <MudCheckBox Dense="true" Label="Account Disabled" @bind-Checked="@userModel.IsDisabled" For="@(() => userModel.IsDisabled)"  Color="@Color.Warning" />
+            </div>
         </EditForm>
     </DialogContent>
     <DialogActions>
@@ -30,7 +52,7 @@
 
     private EditContext editContext;
     private UserModel userModel;
-
+    
     protected override Task OnInitializedAsync()
     {   
         userModel = new UserModel();
@@ -56,8 +78,10 @@
             Id = user.Id,
             FullName = user.FullName,
             Email = user.Email,
+            EmailConfirmed = user.EmailConfirmed,
             PhoneNumber = user.PhoneNumber,
-            ExpiryDate = user.ExpiryDate
+            PhoneConfirmed = user.PhoneNumberConfirmed,
+            IsDisabled = user.IsDisabled,
         };
         editContext = new EditContext(userModel);
 
@@ -65,10 +89,18 @@
     }
 
     private void OnCloseClicked() => MudDialog.Cancel();
-    private void OnSaveClicked() {
+    private async Task OnSaveClicked() {
         if (editContext.Validate())
         {
-            MudDialog.Close(DialogResult.Ok(true));   
+            var user = UserService.GetById(UserId);
+            user.FullName = userModel.FullName;
+            //user.Email = userModel.Email;
+            user.PhoneNumber = userModel.PhoneNumber;
+            user.IsDisabled = userModel.IsDisabled;
+
+            await UserService.UpdateUserAsync(user);
+
+            MudDialog.Close(DialogResult.Ok(true));
         }
     }
 
@@ -87,11 +119,10 @@
         [MinLength(6, ErrorMessage = "Email must be at least 6 characters")]
         [StringLength(32, ErrorMessage = "Email too long (32 character limit)")]
         public string Email { get; set; }
+        public bool EmailConfirmed { get; set; }
 
         public string PhoneNumber { get; set; }
-        public decimal Wallet { get; set; }
-        public DateTime ExpiryDate { get; set; }
-        public bool IsCanceled { get; set; }
+        public bool PhoneConfirmed { get; set; }
         public bool IsDisabled { get; set; }
     }
 }
