--- a/src/Web.WebApp/Shared/MainLayout.razor
+++ b/src/Web.WebApp/Shared/MainLayout.razor
@@ -18,10 +18,10 @@
         </MudDrawerHeader>
         <NavMenu />
     </MudDrawer>
-    <MudMainContent>
+    <MudMainContent Style="min-height: 520px;">
         @Body
-        <PageFooter />
     </MudMainContent>
+    <PageFooter />
 </MudLayout>
 
 @code {
