--- a/src/Web.WebApp/Pages/Admin/SubscriptionPage.razor
+++ b/src/Web.WebApp/Pages/Admin/SubscriptionPage.razor
@@ -18,6 +18,11 @@
 
 
 <MudContainer Class="mt-8" MaxWidth="@MaxWidth.ExtraLarge">
+    <Breadcrumb IsAdmin="true">
+        <BreadcrumbItem Icon="@Icons.Filled.People" Title="Accounts" Href="/admin/users" />
+        <BreadcrumbItem Icon="@Icons.Filled.CreditCard" Title="Subscriptions" />
+    </Breadcrumb>
+
     <MudTable @ref="table" ServerData="@(new Func<TableState, Task<TableData<SubscriptionDto>>>(ServerReload))"
         Dense="true" FixedHeader="true" Hover="true" Breakpoint="Breakpoint.Sm" Striped="true"
         Loading="@loading" LoadingProgressColor="Color.Info"
