--- a/src/Web.WebApp/Pages/Admin/Users.razor
+++ b/src/Web.WebApp/Pages/Admin/Users.razor
@@ -12,6 +12,9 @@
 
 
 <MudContainer Class="mt-8" MaxWidth="@MaxWidth.ExtraLarge">
+    <Breadcrumb IsAdmin="true">
+        <BreadcrumbItem Icon="@Icons.Filled.People" Title="Accounts" />
+    </Breadcrumb>
     <MudTable @ref="table" ServerData="@(new Func<TableState, Task<TableData<UserDto>>>(ServerReload))"
         Dense="true" FixedHeader="true" Hover="true" Breakpoint="Breakpoint.Sm" Striped="true"
         Loading="@loading" LoadingProgressColor="Color.Info"
