--- a/src/Web.WebApp/_Imports.razor
+++ b/src/Web.WebApp/_Imports.razor
@@ -8,6 +8,7 @@
 @using Microsoft.JSInterop
 @using Web.WebApp
 @using Web.WebApp.Shared
+@using Web.WebApp.Components.Breadcrumb
 @using MudBlazor
 
 
