--- a/src/Web.WebApp/Pages/Admin/SubscriptionEditDialog.razor
+++ b/src/Web.WebApp/Pages/Admin/SubscriptionEditDialog.razor
@@ -2,7 +2,7 @@
 @using Core.Application.Models
 @using System.ComponentModel.DataAnnotations
 @using Core.Application.Services.IServices
-@using Core.Application.Subscriptions
+@using Core.Application.Mediator.Subscriptions
 @using Core.Domain.Entities
 @using Core.Domain.Enums
 @using MediatR
